--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
+    "next-sanity": "^4.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
